# kondi-chat

./: .gitignore  .npmignore  AGENTS.md  ARCHITECTURE.md (New file for documentation)  CHANGELOG.md  Dockerfile  LICENSE  README.md  glm-code-review.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/memory/: project_kondi_council.md
.github/workflows/: ci.yml  release.yml
Before/: After Explanation
docs/: CONTEXT_EFFICIENCY_PLAN.md  api.md  configuration.md  getting-started.md
homebrew/: kondi-chat.rb
scripts/: postinstall.cjs  postinstall.js
specs/: CONVENTIONS.md  IMPLEMENTATION-LOG.md  REVIEW-NOTES.md  SIMPLIFICATION-NOTES.md
specs/01-permission-system/: SPEC.md
specs/02-git-integration/: SPEC.md
specs/03-diff-display/: SPEC.md
specs/04-memory-system/: SPEC.md
specs/05-undo-checkpoints/: SPEC.md
specs/06-session-resume/: SPEC.md
specs/07-sub-agents/: SPEC.md
specs/08-persistent-loop/: SPEC.md
specs/09-image-input/: SPEC.md
specs/10-non-interactive/: SPEC.md
specs/11-web-tools/: SPEC.md
specs/12-hooks-system/: SPEC.md
specs/13-error-recovery/: SPEC.md
specs/14-rate-limiting/: SPEC.md
specs/15-telemetry/: SPEC.md
specs/16-packaging/: SPEC.md
specs/17-documentation/: SPEC.md
specs/18-testing/: SPEC.md
src/: types.ts
src/audit/: analytics.ts  ledger.test.ts  ledger.ts  telemetry.ts
src/cli/: backend.ts  commands.ts  help.ts  main-repl.ts  main.ts  main.tsx  submit-helpers.ts  submit.ts  wizard.ts
src/context/: bootstrap.ts  (+11 more)
tui/: Cargo.toml
tui/src/: app.rs  main.rs  protocol.rs  ui.rs
(+60 files in other folders)
